--- a/src/ContactApp/ContactApp/Views/Contact/Delete.cshtml
+++ b/src/ContactApp/ContactApp/Views/Contact/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model ContactApp.Models.ContactDetails
+﻿@using DataModel.Models
+@model DataModel.Models.ContactDetailsModel
 
 @{
     ViewBag.Title = "Delete";
@@ -53,7 +54,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
