--- a/src/ContactApp/ContactApp/Views/Contact/Edit.cshtml
+++ b/src/ContactApp/ContactApp/Views/Contact/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ContactApp.Models.ContactDetails
+﻿@using DataModel.Models
+@model DataModel.Models.ContactDetailsModel
 
 @{
     ViewBag.Title = "Edit";
@@ -8,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ContactDetails</h4>
         <hr />
@@ -49,7 +50,7 @@
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("Status",
-                    new SelectList(Enum.GetValues(typeof(ContactApp.Models.Status))),
+                    new SelectList(Enum.GetValues(typeof(DataModel.Models.Status))),
                     "Select",
                     new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
